--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -19,9 +19,7 @@ jobs:
     - name: test with flake
       run: |
         python -m flake8
-        cd infra_project/
-        # запустить написанные разработчиком тесты
-        python manage.py test
+        pytest
 
   build_and_push:
     runs-on: ubuntu-latest
