--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -37,7 +37,7 @@ jobs:
     - name: docker push
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./api_yamdb
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
 
