fix COPY step in dockerfile

--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.7-slim
 LABEL author='Arteev Ilia' version=1
 
 WORKDIR /app
-COPY api_yamdb/ ./
+COPY ./ ./
 RUN pip3 install -r requirements.txt --no-cache-dir
 
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind" , "0:8000"]
