--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -8,7 +8,7 @@ jobs:
     - name: setup python
       uses: actions/setup-python@v2
       with: 
-        python-version: 3.7
+        python-version: ["3.7", "3.8", "3.9"]
     - name: install dependency
       run: |
         python -m pip install --upgrade pip
@@ -20,10 +20,12 @@ jobs:
       run: |
         python -m flake8
         pytest
+    - uses: hmarr/debug-action@v2
 
   build_and_push:
     runs-on: ubuntu-latest
     needs: smoke_test
+    if: github.ref == 'origin/master'
     steps:
     - name: check out
       uses: actions/checkout@v2
