--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -3,12 +3,16 @@ on: [push]
 jobs:
   smoke_test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ "3.7", "3.8", "3.9" ]
+
     steps:
     - uses: actions/checkout@v2
-    - name: setup python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with: 
-        python-version: ["3.7", "3.8", "3.9"]
+        python-version: ${{ matrix.python-version }}
     - name: install dependency
       run: |
         python -m pip install --upgrade pip
