--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -3,12 +3,16 @@ on: [push]
 jobs:
   smoke_test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ "3.7", "3.8", "3.9" ]
+
     steps:
     - uses: actions/checkout@v2
-    - name: setup python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with: 
-        python-version: 3.7
+        python-version: ${{ matrix.python-version }}
     - name: install dependency
       run: |
         python -m pip install --upgrade pip
@@ -24,6 +28,7 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     needs: smoke_test
+    if: github.ref == 'refs/heads/master'
     steps:
     - name: check out
       uses: actions/checkout@v2
@@ -37,7 +42,7 @@ jobs:
     - name: docker push
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./api_yamdb
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
 
